--- a/b1.html
+++ b/b1.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Majalah: B1</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -114,21 +114,21 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="b1.jpg" alt="Majalah Bobo - Hewan-Hewan Pewaris Bumi">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Bobo - Hewan-Hewan Pewaris Bumi</div>
+                <div><span>Jenis:</span> Majalah Anak</div>
+                <div><span>Penerbit:</span> Gramedia Majalah</div>
+                <div><span>anggal Terbit:</span> 17 April 2025</div>
+                <div><span>Jumlah Halaman:</span> 48 halaman</div>
+                <div class="harga">Rp17.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Edisi spesial Majalah Bobo kali ini mengangkat tema *Hewan-Hewan Pewaris Bumi*, mengenalkan anak-anak pada berbagai spesies hewan yang unik, langka, dan penting bagi keseimbangan alam.</p>
+            <p>Dikemas dengan ilustrasi menarik, cerita inspiratif, dan fakta-fakta edukatif, edisi ini mengajak anak untuk lebih mencintai dan menjaga kelestarian satwa-satwa luar biasa yang menjadi bagian dari warisan bumi kita.</p>
         </div>
     </div>
 </body>
