--- a/b2.html
+++ b/b2.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Majalah: Bobo - Dunia dalam Dongeng</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -114,21 +114,21 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="b2.jpg" alt="Majalah Bobo - Dunia dalam Dongeng">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Bobo - Dunia dalam Dongeng</div>
+                <div><span>Jenis:</span> Majalah Anak</div>
+                <div><span>Penerbit:</span> Gramedia Majalah</div>
+                <div><span>Tanggal Terbit:</span> 22 Juni 2023</div>
+                <div><span>Jumlah Halaman:</span> 52 halaman</div>
+                <div class="harga">Rp17.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Edisi ini menyajikan berbagai kisah dongeng penuh imajinasi dan pesan moral, membawa pembaca kecil ke dalam dunia ajaib bersama karakter favorit dari rubrik Bobo, Bona, Rong-Rong, dan kawan-kawan.</p>
+            <p>*Dunia dalam Dongeng* mengajak anak untuk berpetualang lewat cerita yang menyenangkan sekaligus mendidik, lengkap dengan ilustrasi menarik yang memperkaya pengalaman membaca mereka.</p>
         </div>
     </div>
 </body>
