--- a/th2.html
+++ b/th2.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Majalah: Tech - NVIDIA Dalam Tangan</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -108,27 +108,26 @@
                 align-items: center;
                 text-align: center;
             }
-        }
+        }   
     </style>
 </head>
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="th2.jpg" alt="Majalah Tech - NVIDIA Dalam Tangan">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Tech - NVIDIA Dalam Tangan</div>
+                <div><span>Jenis:</span> Majalah Teknologi</div>
+                <div><span>Penerbit:</span> PC.com Malaysia</div>
+                <div><span>Tanggal Terbit:</span> Maret 2013</div>
+                <div><span>Jumlah Halaman:</span> 56 halaman</div>
+                <div class="harga">Rp30.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Majalah *Tech* edisi Mac 2013 menyajikan ulasan mendalam tentang NVIDIA, perbandingan HTC dan Samsung, serta panduan memilih monitor dan gadget pintar untuk kebutuhan harian.</p>
         </div>
     </div>
 </body>
