--- a/aas.html
+++ b/aas.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Majalah: Aku Anak Saleh - Pewaris NKRI Seri 10</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -114,21 +114,21 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="aas.jpg" alt="Aku Anak Saleh - Pewaris NKRI Seri 10">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Aku Anak Saleh - Pewaris NKRI Seri 10</div>
+                <div><span>Jenis:</span> Majalah Anak Islami</div>
+                <div><span>Penerbit:</span> Penerbit Sahabat Mulia</div>
+                <div><span>Seri:</span> Seri 10</div>
+                <div><span>Jumlah Halaman:</span> 40 halaman</div>
+                <div class="harga">Rp20.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Majalah *Aku Anak Saleh - Pewaris NKRI Seri 10* menyajikan kisah dan nilai-nilai keislaman yang dikemas dengan cerita menarik dan ilustrasi penuh warna. Edisi ini mengajarkan pentingnya cinta tanah air sebagai bagian dari iman, serta membentuk karakter anak saleh yang peduli terhadap bangsa dan sesama.</p>
+            <p>Dilengkapi dengan rubrik edukatif seperti kisah teladan, aktivitas anak, dan doa harian, majalah ini menjadi pilihan tepat untuk menanamkan nilai moral dan religius sejak dini.</p>
         </div>
     </div>
 </body>
