--- a/ashoe.html
+++ b/ashoe.html
@@ -2,8 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
-    <style>
+    <title>Detail Buku: A Short History of England</title>
+ <style>
         body {
             font-family: 'Segoe UI', sans-serif;
             background-color: beige;
@@ -114,21 +114,20 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="ashoe.jpeg" alt="A Short History of England">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> A Short History of England</div>
+                <div><span>Pengarang:</span> Simon Jenkins</div>
+                <div><span>Penerbit:</span> Profile Books</div>
+                <div><span>Jumlah Halaman:</span> 304 halaman</div>
+                <div class="harga">Rp105.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p><em>A Short History of England</em> adalah buku sejarah yang ringkas namun menyeluruh mengenai perkembangan Inggris dari zaman kuno hingga modern. Ditulis dengan gaya naratif yang hidup dan informatif, Simon Jenkins membawa pembaca menjelajahi peristiwa-peristiwa penting dalam sejarah Inggris.</p>
+            <p>Cocok bagi pembaca yang ingin memahami sejarah Inggris secara cepat namun tetap mendalam, dengan analisis tajam dan gaya penulisan yang mudah diikuti.</p>
         </div>
     </div>
 </body>
