--- a/bk.html
+++ b/bk.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Buku: Bung Karno</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -114,21 +114,21 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="bk.jpeg" alt="Bung Karno">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Bung Karno: Penyambung Lidah Rakyat Indonesia</div>
+                <div><span>Pengarang:</span> Cindy Adams</div>
+                <div><span>Penerbit:</span> Gunung Agung</div>
+                <div><span>Jumlah Halaman:</span> 435 halaman</div>
+                <div class="harga">Rp108.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
 
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p><em>Bung Karno: Penyambung Lidah Rakyat Indonesia</em> adalah biografi resmi Presiden pertama Republik Indonesia, Ir. Soekarno, yang ditulis oleh jurnalis Amerika, Cindy Adams. Buku ini menggambarkan perjalanan hidup Bung Karno, dari masa kecil hingga memimpin bangsa Indonesia menuju kemerdekaan.</p>
+            <p>Disampaikan dengan gaya naratif langsung dari wawancara eksklusif bersama Bung Karno, buku ini memuat pemikiran, perjuangan, serta semangat revolusi yang melekat kuat dalam jiwa sang proklamator. Karya ini merupakan referensi penting dalam memahami sejarah dan karakter tokoh besar Indonesia.</p>
         </div>
     </div>
 </body>
