--- a/gd.html
+++ b/gd.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
+    <title>Detail Buku: Gus Dur</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -114,21 +114,21 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="gd.jpeg" alt="Gus Dur">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Gus Dur: The Authorized Biography</div>
+                <div><span>Pengarang:</span> Greg Barton</div>
+                <div><span>Penerbit:</span> Kepustakaan Populer Gramedia</div>
+                <div><span>Jumlah Halaman:</span> 536 halaman</div>
+                <div class="harga">Rp108.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
 
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Buku <em>Gus Dur: The Authorized Biography</em> merupakan potret menyeluruh tentang kehidupan, pemikiran, dan perjuangan tokoh pluralisme Indonesia, KH. Abdurrahman Wahid. Ditulis oleh akademisi Australia, Greg Barton, buku ini memberikan wawasan mendalam tentang perjalanan hidup Gus Dur dari masa muda hingga menjadi Presiden ke-4 Republik Indonesia.</p>
+            <p>Biografi ini menampilkan sisi humanis dan intelektual Gus Dur dalam menghadapi dinamika politik, sosial, dan agama. Karya ini menjadi bacaan wajib bagi siapa saja yang ingin memahami kontribusi besar Gus Dur dalam membangun demokrasi dan keberagaman Indonesia.</p>
         </div>
     </div>
 </body>
