--- a/th.html
+++ b/th.html
@@ -2,8 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Doraemon Vol. 20</title>
-    <style>
+    <title>Detail Majalah: Tech - R7 Mod</title>
+    <style>   
         body {
             font-family: 'Segoe UI', sans-serif;
             background-color: beige;
@@ -108,27 +108,26 @@
                 align-items: center;
                 text-align: center;
             }
-        }
-    </style>
+        }   
+     </style>
 </head>
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="dr.jpg" alt="Doraemon Vol. 20">
+            <img src="th.jpg" alt="Majalah Tech - R7 Mod">
             <div class="info-buku">
-                <div><span>Judul:</span> Doraemon Vol. 20</div>
-                <div><span>Pengarang:</span> Fujiko F. Fujio</div>
-                <div><span>Penerbit:</span> Shogakukan</div>
-                <div><span>Jumlah Halaman:</span> 180 halaman</div>
-                <div class="harga">Rp37.000</div>
+                <div><span>Judul:</span> Tech - 4 Mod Berbeza dengan R7</div>
+                <div><span>Jenis:</span> Majalah Teknologi</div>
+                <div><span>Penerbit:</span> PC.com Malaysia</div>
+                <div><span>Tanggal Terbit:</span> Juli 2013</div>
+                <div><span>Jumlah Halaman:</span> 54 halaman</div>
+                <div class="harga">Rp28.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p><em>Doraemon Vol. 20</em> melanjutkan petualangan Nobita bersama robot kucing dari masa depan, Doraemon. Dalam volume ini, Doraemon kembali mengeluarkan alat-alat canggihnya untuk membantu Nobita dalam situasi sehari-hari yang lucu dan penuh pelajaran hidup.</p>
-            <p>Kisah-kisah dalam volume ini menekankan pentingnya kerja keras, tanggung jawab, dan nilai persahabatan yang hangat.</p>
+            <p>Edisi ini menyorot fitur R7 dengan 4 mode penggunaan berbeda, tips memilih kamera terbaik, serta kabar terbaru dunia ICT dan teknologi Microsoft.</p>
         </div>
     </div>
 </body>
