--- a/ggs.html
+++ b/ggs.html
@@ -2,8 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Buku: Gadis Kretek</title>
-    <style>
+    <title>Detail Buku: Guns, Germs, and Steel</title>
+ <style>
         body {
             font-family: 'Segoe UI', sans-serif;
             background-color: beige;
@@ -114,21 +114,20 @@
 <body>
     <div class="container">
         <div class="detail-buku">
-            <img src="gs.jpg" alt="Gadis Kretek">
+            <img src="ggs.jpeg" alt="Guns, Germs, and Steel">
             <div class="info-buku">
-                <div><span>Judul:</span> Gadis Kretek</div>
-                <div><span>Pengarang:</span> Ratih Kumala</div>
-                <div><span>Penerbit:</span> Gramedia Pustaka Utama</div>
-                <div><span>Jumlah Halaman:</span> 284 halaman</div>
-                <div class="harga">Rp85.000</div>
+                <div><span>Judul:</span> Guns, Germs, and Steel</div>
+                <div><span>Pengarang:</span> Jared Diamond</div>
+                <div><span>Penerbit:</span> W. W. Norton & Company</div>
+                <div><span>Jumlah Halaman:</span> 512 halaman</div>
+                <div class="harga">Rp135.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
         </div>
-
         <div class="sinopsis">
             <h3>Sinopsis</h3>
-            <p>"Gadis Kretek" adalah kisah yang memadukan sejarah, cinta, dan budaya Indonesia melalui perjalanan tokoh-tokohnya dalam industri rokok kretek di masa lampau.</p>
-            <p>Melalui sudut pandang keluarga dan pergolakan zaman, pembaca diajak menelusuri misteri, dendam, dan cinta yang terlupakan. Cerita yang kaya akan nilai budaya ini memperlihatkan betapa sebuah industri bisa menyimpan cerita dalam tiap asap yang mengepul.</p>
+            <p><em>Guns, Germs, and Steel</em> menjawab pertanyaan besar dalam sejarah: Mengapa peradaban Eropa yang mendominasi dunia, bukan peradaban lain? Jared Diamond mengeksplorasi bagaimana geografi, lingkungan, dan biologi memengaruhi distribusi kekuasaan global.</p>
+            <p>Buku ini adalah karya penting dalam bidang geografi, sejarah, dan antropologi yang membantu memahami kesenjangan perkembangan antar masyarakat manusia di berbagai belahan dunia.</p>
         </div>
     </div>
 </body>
