--- a/sg.html
+++ b/sg.html
@@ -100,10 +100,10 @@
         <div class="detail-buku">
             <img src="sg.jpg" alt="Sang Kuriang">
             <div class="info-buku">
-                <div><span class="label">Judul:</span> Sang Kuriang</div>
-                <div><span class="label">Pengarang:</span> Cerita Rakyat Sunda</div>
-                <div><span class="label">Penerbit:</span> Dongeng Nusantara</div>
-                <div><span class="label">Jumlah Halaman:</span> 24 halaman</div>
+                <div><span>Judul:</span> Sang Kuriang</div>
+                <div><span>Pengarang:</span> Cerita Rakyat Sunda</div>
+                <div><span>Penerbit:</span> Dongeng Nusantara</div>
+                <div><span>Jumlah Halaman:</span> 24 halaman</div>
                 <div class="harga">Rp38.000</div>
                 <button class="tombol-beli">Beli Sekarang</button>
             </div>
